# skunkcord

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  build.rs  package-bundle.sh  package.sh  rustfmt.toml
.cargo/: config.toml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  IOS-SIGNING.md  MAINTENANCE.md  UI-QML.md  WINDOWS-BUILD.md
include/: discord_qt.h  skunkcord.h
mobile/: ANDROID-BUILD.md  README.md
mobile/android/: build-apk.sh  build.sh
mobile/android/qt/: CMakeLists.txt
mobile/android/qt/android-sources/: AndroidManifest.xml
mobile/ios/: build.sh
mobile/ios/qt/: CMakeLists.txt  ExportOptions.plist  Info.plist
mobile/linux-test/: CMakeLists.txt  build.sh
mobile/shared/: AppController.cpp  AppController.h  main.cpp
plugins/: .luarc.json  README.md  discord-enums.lua  discord.d.lua
plugins/fake-deafen/: main.lua  plugin.json
plugins/fake-mute/: main.lua  plugin.json
plugins/message-logger/: main.lua  plugin.json
scripts/: pre-commit.sh
src/: app_runner.rs  bridge.rs  build_number.rs  lib.rs  main.rs  mobile_ffi.rs
src/captcha/: mod.rs  widget.rs
src/client/: account_switcher.rs  api.rs  attachments.rs  autocomplete.rs  automod.rs  captcha_interceptor.rs  cookies.rs  discovery.rs  entitlements.rs  error_helpers.rs  forums.rs  interactions.rs  invites.rs  misc_endpoints.rs  mod.rs  onboarding.rs  permissions.rs  polls.rs  premium.rs  rate_limiter.rs  reactions.rs  read_states.rs  role_connections.rs  scheduled_events.rs  session.rs  soundboard.rs  stage.rs  templates.rs  threads.rs  timing.rs  typing.rs  user_settings.rs  webhooks.rs  welcome_screen.rs  wreq_auth.rs  x_fingerprint.rs
src/features/: browser_handoff.rs  clear_urls.rs  emoji_picker.rs  experiments.rs  flags.rs  gif_picker.rs  mod.rs  no_reply_mention.rs  notifications.rs  pin_dms.rs  show_hidden_channels.rs  silent_messages.rs  streamer_mode.rs
src/features/arrpc/: mod.rs  process_scanner.rs  rpc_server.rs
src/fingerprint/: browser_data.rs  mod.rs  super_properties.rs
src/gateway/: events.rs  health.rs  mod.rs  payloads.rs  session_limits.rs
src/input/: keybinds.rs  mod.rs
src/plugins/: api.rs  builtin.rs  hooks.rs  loader.rs  manifest.rs  mod.rs  runtime.rs
src/plugins/message_logger/: cache.rs  export.rs  handler.rs  mod.rs
src/proxy/: mod.rs
src/qml/: Discord.js  main.qml  mobile.qml  test_ui.qml
src/qml/components/: DAvatar.qml  DBadge.qml  DHoverRect.qml  DScrollBar.qml  DSeparator.qml  DText.qml  GuildIcon.qml  IconButton.qml  RolePill.qml  Twemoji.qml  UserBadges.qml  qmldir
src/rendering/: markdown.rs  mod.rs
src/security/: content.rs  link_preview.rs  mod.rs
src/storage/: encryption.rs  mod.rs
src/ui/: app_controller.rs  login_window.rs  main_window.rs  mod.rs  styles.rs  web_view.rs
src/voice/: audio_loop.rs  connection.rs  crypto.rs  fake_mute.rs  gateway.rs  mod.rs  udp.rs  voice_ws.rs
tests/: advanced_api_test.rs  api_endpoints_test.rs  full_coverage_test.rs  mock_discord.rs  stress_test.rs
