# Copyright (c) Skunk Ventures LLC
# Last modified: 2025-03-07
# SPDX-License-Identifier: MIT

[package]
name = "skunkcord"
version = "0.2.0"
edition = "2021"
license = "MIT"
default-run = "skunkcord"

[[bin]]
name = "skunkcord"
path = "src/main.rs"

[[bin]]
name = "test_gateway"
path = "src/bin/test_gateway.rs"

[lib]
name = "skunkcord"
# Build as both rlib (for desktop binary) and cdylib (for mobile FFI)
crate-type = ["rlib", "cdylib"]

[features]
default = ["desktop", "wreq-auth"]
desktop = ["dep:qmetaobject", "dep:cpp", "dep:arboard"]
mobile = []
# Use wreq (Chrome TLS/HTTP2 emulation) for credential login and MFA to avoid Discord antibot rejection
wreq-auth = ["dep:wreq", "dep:wreq-util"]

[dependencies]
# Qt bindings (desktop only; excluded for iOS/Android)
qmetaobject = { version = "0.2", optional = true }
cpp = { version = "0.5", optional = true }
arboard = { version = "3", optional = true }

# HTTP client (rustls to avoid OpenSSL so we can link wreq/BoringSSL for auth TLS spoofing)
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "gzip", "brotli", "socks", "multipart", "http2", "rustls-tls"] }

# TLS-fingerprint spoofing for credential login/MFA (Chrome JA3/HTTP2; avoids Discord/Cloudflare antibot)
wreq = { version = "6.0.0-rc.28", optional = true, features = ["cookies", "gzip", "brotli", "json", "prefix-symbols"] }
wreq-util = { version = "3.0.0-rc.10", optional = true, features = ["emulation"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket support (rustls to avoid OpenSSL when using wreq-auth)
tokio-tungstenite = { version = "0.21", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
futures-util = "0.3"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography for fingerprinting
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"

# URL parsing
url = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# Storage/persistence
directories = "5.0"

# Compression for gateway (zlib-stream - streaming decompressor for Discord)
zlib_stream = "0.1"

# Regular expressions
regex = "1"

# HTML parsing for build number scraping
scraper = "0.22"

# Environment variables
dotenv = "0.15"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Voice encryption
xsalsa20poly1305 = "0.9"

# Session encryption at rest (AES-256-GCM, key from machine ID)
aes-gcm = "0.10"
argon2 = "0.5"

[dev-dependencies]
tempfile = "3.8"
wiremock = "0.6"
tokio-test = "0.4"

[build-dependencies]
cpp_build = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
